Quick adjustment to fix scrolling for mobile devices (overflow: hidden)

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(255, 255, 255);
     overflow-x: hidden;
+    overflow: hidden;
 }
 
 .content {
